--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<div id="app"></div>
-<!-- <img src="https://c.tenor.com/aaEMtGfZFbkAAAAi/rat-spinning.gif" alt=""> -->
+<html>
+  <body>
+    <h1>Paradigms comparison</h1>
+    <h2>Factorial</h2>
+    <input type="number" id="input-n" value="5" />
+    <br />
+    <h3>Functional Result</h3>
+    <button id="func-btn">Calc</button>
+    <span id="func-sum-result"></span>
+    <br />
+  </body>
+</html>
