--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
   <body>
     <h1>Paradigms comparison</h1>
     <h2>Factorial</h2>
-    <input type="number" id="input-n" value="5" />
+    <input type="number" id="input-n" value="5" min="0" max="100" />
     <br />
     <h3>Functional Result</h3>
     <button id="func-btn">Calc</button>
     <span id="func-sum-result"></span>
+    <br />
+    <h3>Procedural Result</h3>
+    <button id="oo-btn">Calc</button>
+    <span id="oo-sum-result"></span>
     <br />
   </body>
 </html>
