--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <body>
-    <h1>Paradigms comparison</h1>
-    <h2>Factorial</h2>
+    <h1>Comparação de Paradigmas de Programação</h1>
+    <h2>Fatorial</h2>
     <input type="number" id="input-n" value="5" min="0" max="100" />
     <br />
-    <h3>Functional Result</h3>
+    <p>Resultado Funcional</p>
     <button id="func-btn">Calc</button>
     <span id="func-sum-result"></span>
     <br />
-    <h3>Procedural Result</h3>
+    <p>Resultado Procedural</p>
     <button id="oo-btn">Calc</button>
     <span id="oo-sum-result"></span>
     <br />
